<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="me.iweizi.wechatstepchanger.DetailsActivity">


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_today_step_201"/>


    <TextView
        android:id="@+id/current_today_step_text_view"
        style="@style/number"
        android:hint="@string/current_today_step_201"
        android:textAlignment="center"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_today_time_202"/>


    <TextView
        android:id="@+id/save_today_time_text_view"
        style="@style/number"
        android:hint="@string/save_today_time_202"
        android:textAlignment="center"/>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pre_sensor_step_203"/>


    <TextView
        android:id="@+id/pre_sensor_step_text_view"
        style="@style/number"
        android:hint="@string/pre_sensor_step_203"
        android:textAlignment="center"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/last_save_step_time_204"/>


    <TextView
        android:id="@+id/last_save_step_time_text_view"
        style="@style/number"
        android:hint="@string/last_save_step_time_204"
        android:textAlignment="center"/>


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sensor_time_stamp_209"/>

    <TextView
        android:id="@+id/sensor_time_stamp_text_view"
        style="@style/number"
        android:hint="@string/sensor_time_stamp_209"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/load_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>

        <Button
            android:id="@+id/store_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store"/>

    </LinearLayout>
</LinearLayout>
